<resources>

    <string name="app_name">Medical Admin</string>
    <string name="deviceLost">No se encontraron pacientes</string>
    <string name="email">Correo Electrónico</string>
    <string name="login_large">Iniciar Sesión</string>
    <string name="password">Contraseña</string>
    <string name="passwordLost">¿Has olvidado tu contraseña?</string>
    <string name="login">Ingresar</string>
    <string name="welcome">Bienvenido</string>
    <string name="alert_email_in">Ingrese un correo valido</string>
    <string name="alert_password_in">Ingrese una contraseña</string>



    <string name="personal_information">Datos Personales</string>
    <string name="idenfied">Identificador</string>
    <string name="name">Nombre</string>
    <string name="skill">Especialidad</string>
    <string name="cc">Cedula</string>
    <string name="patients">Pacientes</string>
    <string name="patient">Paciente</string>
    <string name="cellphone">Telefono</string>
    <string name="save">Guardar</string>
    <string name="patientlist">Lista de pacientes</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <string name="helpzone">Ayuda</string>
    <string name="reason">Motivo:</string>
    <string name="message">Mensaje:</string>
    <string name="texthelp">Si tienes inconvenientes, dudas o sugerencias sobre esta aplicación, puedes contactarnos y te responderemos lo antes posible. ¡Escríbenos!</string>
    <string name="titulohelp">Bienvenido al centro de ayuda de Medical</string>
    <string name="option2">Quejas</string>
    <string name="option3">Reclamos</string>
    <string name="sendmail">Enviar</string>

    <string name="fecha">2019/04/05</string>

    <string name="profile">Perfil</string>

    <string name="list_patients">Listado de Pacientes</string>
    <string name="list_professionals">Listado de Profesionales</string>

    <string name="monitoringtext">Monitoreo</string>

    <string name="Home">INICIO</string>
    <string name="List_patients">Lista de pacientes</string>
    <string name="list_Dates">Fechas Monitoreadas</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="paymethod">Método de pago</string>
    <string name="paydetails">Perfil</string>
    <string name="numbercard">Numero de tarjeta</string>
    <string name="expirydate">Fecha de vencimiento</string>
    <string name="cvcode">Codigo CV</string>
    <string name="totalpay">Total a pagar</string>
    <string name="management_professional">Gestion de profesionales de la salud</string>
    <string name="management_patients">Gestion de pacientes</string>
    <string name="management_help">Gestion de ayuda</string>

    <string name="select_option">Selecciona una opción</string>

    <string name="delete">Eliminar</string>

    <string name="add">Agregar</string>
    <string name="assign">Asignar</string>
    <string name="info">Información</string>
    <string name="name_1">Nombre:</string>
    <string name="location_1">Ubicación:</string>
    <string name="location_example_1">Cali,Valle del cauca</string>
    <string name="id">Cedula</string>
    <string name="id_example">1.234.567.890</string>
    <string name="id_1">Cedula:</string>
    <string name="profession_1">Profesión:</string>
    <string name="profession_example">Cardialogo, Deportologo, Nutricionista, etc</string>
    <string name="birth_date_1">Fecha de nacimiento:</string>
    <string name="birth_date_example">AAAA/MM/DD</string>
    <string name="risk_1">Nivel de riesgo:</string>
    <string name="risk_example">BAJO, MEDIO O ALTO</string>
    <string name="diagnostic_1">Diagnostico:</string>
    <string name="diagnostic_example">Descripción sobre el paciente y sus patalogias</string>
    <string name="age_1">Edad:</string>
    <string name="age_example">##</string>
    <string name="height_1">Peso:</string>
    <string name="weight_example">##</string>
    <string name="weight_1">Altura:</string>
    <string name="height_example">##</string>
    <string name="email_1">Correo Electrónico:</string>
    <string name="email_example">example@mail.com</string>
    <string name="mobile_number_1">Numero de celular:</string>
    <string name="mobile_number_example">301-245-6789</string>
    <string name="city_1">Municipio:</string>
    <string name="state_1">Departamento:</string>
    <string name="state_example">Valle Del Cauca</string>
    <string name="city_example">Cali</string>
    <string name="password_1">Contraseña:</string>
    <string name="password_example">**********</string>
    <string name="confirm_password_1">Confirmar Contraseña:</string>
    <string name="information_company_1">Datos de la compañia</string>
    <string name="information_contact_1">Datos del contacto</string>
    <string name="address_1">Dirección:</string>
    <string name="address_example">Cra 123 # 45 - 67</string>
    <string name="telephone_number_1">Numero telefonico:</string>
    <string name="telephone_number_example">123 45 67</string>
    <string name="register">Registrar</string>
    <string name="contact">Contacto</string>
    <string name="relation_1">Parentesco:</string>
    <string name="relation_example">Padre, Hijo, Hermano, Amigo, etc.</string>
    <string name="landing_logo">landing_logo</string>


</resources>
