<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_vertical_blue"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:paddingVertical="@dimen/size_xxs"
            android:text="@string/assign"
            android:textColor="@color/almost_white"
            android:textSize="@dimen/text_size_xlarge" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_strong"
        android:fontFamily="@font/montserrat_regular"
        android:paddingVertical="@dimen/margin_large"
        android:paddingStart="@dimen/size_xxs"
        android:text="@string/patient"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_patient"
        android:layout_marginVertical="@dimen/margin_large"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:padding="@dimen/margin_default"
        android:elevation="@dimen/margin_default"
        android:outlineAmbientShadowColor="@color/blue_strong"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/body_huge"
            android:layout_height="@dimen/body_huge"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_launcher_round"/>

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/body_huge"
            android:layout_marginStart="@dimen/margin_xsmall"
            android:layout_gravity="center_vertical"
            android:background="@color/blue_strong"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red_strong"
                    android:textSize="@dimen/text_size_small"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/name_1"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="20"
                    android:textColor="@color/blue_strong"
                    android:layout_marginStart="@dimen/margin_xsmall"
                    android:textSize="@dimen/text_size_xsmall"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/name"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red_strong"
                    android:textSize="@dimen/text_size_small"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/age_1"/>

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_strong"
                    android:layout_marginStart="@dimen/margin_xsmall"
                    android:textSize="@dimen/text_size_xsmall"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/age_example"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red_strong"
                    android:textSize="@dimen/text_size_small"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/id_1"/>

                <TextView
                    android:id="@+id/id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_strong"
                    android:layout_marginStart="@dimen/margin_xsmall"
                    android:textSize="@dimen/text_size_xsmall"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/id_example"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red_strong"
                    android:textSize="@dimen/text_size_small"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/risk_1"/>

                <TextView
                    android:id="@+id/risk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_strong"
                    android:layout_marginStart="@dimen/margin_xsmall"
                    android:textSize="@dimen/text_size_xsmall"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/risk_example"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red_strong"
                    android:textSize="@dimen/text_size_small"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/diagnostic_1"/>

                <TextView
                    android:id="@+id/diagnostic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_strong"
                    android:textSize="@dimen/text_size_xsmall"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/diagnostic_example"/>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/list_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_strong"
        android:fontFamily="@font/montserrat_regular"
        android:paddingVertical="@dimen/margin_large"
        android:paddingStart="@dimen/size_xxs"
        android:text="@string/list_professionals"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_persons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/text_size_xxs"/>

</LinearLayout>